--- a/.gitconfig
+++ b/.gitconfig
@@ -7,3 +7,5 @@
 	tool = vimdiff3
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --branches
+[init]
+	defaultBranch = main
