--- a/.gitconfig
+++ b/.gitconfig
@@ -10,3 +10,5 @@
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --branches
 [init]
 	defaultBranch = main
+[includeIf "gitdir:~/Work/"]
+	path = ~/dotfiles/.gitconfig-webtec
