--- a/.gitconfig
+++ b/.gitconfig
@@ -12,3 +12,14 @@
 	defaultBranch = main
 [includeIf "gitdir:~/Work/"]
 	path = ~/dotfiles/.gitconfig-webtec
+[pull]
+	rebase = false
+[pager]
+	diff = delta
+	log = delta
+	reflog = delta
+	show = delta
+[interactive]
+	diffFilter = delta --color-only --features=interactive
+[diff]
+	tool = delta
